--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "babel-plugin-styled-components": "^2.1.4",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "react": "^18",
