--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.11.1",
     "sweetalert2-react-content": "^5.0.7",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zxcvbn": "^4.4.2"
   },
   "resolutions": {
     "styled-components": "^5"
